--- a/index.css
+++ b/index.css
@@ -32,12 +32,12 @@
     border: 1px solid blue;
   }
   
-  #project-container {
+  .projectContainer {
     height: 75vh;
     text-align: center;
   }
   
-  #dog-info {
+  #line {
     display: flex;
     flex-flow: column;
     align-items: center;
@@ -53,7 +53,7 @@
     background-image: url("https://constructionexec.com/assets/site_18/images/article/Dollarphotoclub_66178341_small.jpg?width=800");
     background-color: #cccccc;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
   }
   
   h1 {
@@ -61,3 +61,33 @@
 
     /* background: rgba(107, 86, 230, 0.562); */
   }
+
+  .projectContainer {
+    padding: 1rem;
+    width: stretch;
+    height: auto;
+    display: none;
+    /* background: #ffffff; */
+    opacity: .8;
+  }
+
+   
+
+  #main-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    grid-gap: 20px;
+    padding-top: 10px;
+    padding-bottom: 30px;
+    
+  }
+  
+  /* div.card {
+    background-color: #eeeeee;
+    height: 250px;
+    width: 300px;
+    box-shadow: 10px 10px grey;
+    padding: 10px;
+    border-radius: 10px;
+  }  */
