--- a/index.css
+++ b/index.css
@@ -53,13 +53,29 @@
     background-image: url("https://constructionexec.com/assets/site_18/images/article/Dollarphotoclub_66178341_small.jpg?width=800");
     background-color: #cccccc;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
+    background-attachment:fixed;
   }
   
   h1 {
     margin: 50;
+    font-size: 45px;
+  }
 
-    /* background: rgba(107, 86, 230, 0.562); */
+  h2 {
+    margin: 50;
+    font-size: 23px;
+    text-decoration: underline;
+  }
+
+  h4 {
+    margin: 50;
+    font-size: 25px;
+  }
+
+  h5 {
+    margin: 50;
+    font-size: 75px;
   }
 
   .projectContainer {
@@ -69,6 +85,7 @@
     display: none;
     /* background: #ffffff; */
     opacity: .8;
+    
   }
 
    
@@ -80,6 +97,8 @@
     grid-gap: 20px;
     padding-top: 10px;
     padding-bottom: 30px;
+    margin-left: 150px;
+    font-size: 18px;
     
   }
   
@@ -91,3 +110,43 @@
     padding: 10px;
     border-radius: 10px;
   }  */
+
+  .projects {
+    text-align: center;
+    border: grey solid 1px;
+    padding: 1rem;
+    width: 45rem;
+    height: auto;
+    display: inline;
+    margin: 1rem 2rem;
+    box-shadow: 5px 6px #f33737
+    
+    /* background-blend-mode: darken; */
+  }
+
+  .just {
+    /* text-align: center;
+    border: grey solid 1px;
+    padding: 1rem;
+    width: 15rem;
+    height: auto;
+    display: inline;
+    margin: 1rem 2rem;
+    box-shadow: 5px 6px #784be0 */
+    /* background-blend-mode: darken; */
+    background-color: #b1ca99;
+    /* margin: 1rem 2rem; */
+    padding: 1rem;
+  }
+
+  .bttn {
+    border-radius: 8px;
+    background-color: #382dcc;
+    color: white;
+
+  }
+
+  #header{
+    position: sticky;
+    top: 0;
+  }
